--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="wrapper">
 
-			<h1>Zetsy</h1>
+			<h1><a href="#">Zetsy</a></h1>
 			<img src="images/necklace.jpg">
 
 			<h2>About</h2>
