automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="wrapper">
 
 			<h1><a href="#">Zetsy</a></h1>
-			<img src="images/necklace.jpg">
+			<img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
 
 			<h2>About</h2>
 			<p>Mary Wanesia is Jeweler, an Arizona native, and a member of the Navajo tribe. She specializes in creating beautiful contemporary takes on the tradional adornments worn by Navajo in ceramonies and in daily life.
@@ -22,7 +22,7 @@
       <p>Mary's jewelry has received recognition, and been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection been has sold across the United States and Europe and been carried by the retail stores of Bergdorf Goodman.
       </p>
 
-			<h2>Press</h2>
+			<h2 id="press">Press</h2>
 			<a href="#" target="_blank"><img src="images/nmai-logo.png" alt="Museum logo"></a>
 			<a href="#" target="_blank"><img src="images/times-logo.png" alt="Times logo"></a>
 			<a href="#" target="_blank"><img src="images/sedona-logo.png" alt="Sedona logo"></a>
