--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
       <p>Mary's jewelry has received recognition, and been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection been has sold across the United States and Europe and been carried by the retail stores of Bergdorf Goodman.
       </p>
 
-			<h2 id="press">Press</h2>
+    <section id="press">
+			<h2>Press</h2>
 			<a href="#" target="_blank"><img src="images/nmai-logo.png" alt="Museum logo"></a>
 			<a href="#" target="_blank"><img src="images/times-logo.png" alt="Times logo"></a>
 			<a href="#" target="_blank"><img src="images/sedona-logo.png" alt="Sedona logo"></a>
 			<a href="#" target="_blank"><img src="images/bergdorf-logo.png" alt="Bergdorf logo"></a>
-
+    </section>
 			<footer>
 				<p> © 2014 Zetsy, All Rights Reserved.</p>
 			</footer>
