--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <section id="press">
 			<h2>Press</h2>
-			<a href="#" target="_blank"><img src="images/nmai-logo.png" alt="Museum logo"></a>
-			<a href="#" target="_blank"><img src="images/times-logo.png" alt="Times logo"></a>
-			<a href="#" target="_blank"><img src="images/sedona-logo.png" alt="Sedona logo"></a>
-			<a href="#" target="_blank"><img src="images/bergdorf-logo.png" alt="Bergdorf logo"></a>
+			<a href="http://nmai.si.edu/home/" target="_blank"><img src="images/nmai-logo.png" alt="Museum logo"></a>
+			<a href="http://www.nytimes.com/pages/t-magazine/" target="_blank"><img src="images/times-logo.png" alt="Times logo"></a>
+			<a href="http://www.sedonamonthly.com" target="_blank"><img src="images/sedona-logo.png" alt="Sedona logo"></a>
+			<a href="http://www.bergdorfgoodman.com/" target="_blank"><img src="images/bergdorf-logo.png" alt="Bergdorf logo"></a>
     </section>
 			<footer>
 				<p> © 2014 Zetsy, All Rights Reserved.</p>
